# plagiarism_checker

./: .gitignore  pyproject.toml  requirments.txt
app/: auth.py  config.py  database.py  encrypted_type.py  main.py  models.py  schemas.py
app/routers/: __init__.py  admin.py  auth.py  courses.py  dashboard.py  exams.py  reports.py  student.py  submissions.py
app/services/: audit.py  classifier.py  crypto.py  extraction.py  similarity.py
app/tasks/: analysis.py
scripts/: seed_admin.py
templates/: base.html
templates/admin/: course.html  dashboard.html  department.html
templates/auth/: login.html  register.html
templates/dashboard/: course.html  exam.html  home.html  pair.html
templates/dashboard/fragments/: pair_table.html  review_badge.html
templates/student/: courses.html  dashboard.html  submission.html
tests/: conftest.py
