[project]
name = "plagiarism-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.2",
    "fastapi[standard]>=0.134.0",
    "jinja2>=3.1.6",
    "nltk>=3.9.3",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pypdf>=6.7.4",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.4.0",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.47",
    "ty>=0.0.19",
]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/__pycache__/*", "*/htmlcov/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]


[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]


